# eskit

./: .gitignore  CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
docs/: design.md  everything-es.md
eskit/: __init__.py  cli.py  es.py  formatters.py  fuzzy.py  listary.py  models.py  safety.py  util.py
eskit-python/: CHANGELOG.md  README.md  RELEASE.md  pyproject.toml
eskit-python/docs/: commands.md  everything-es.md
eskit-python/eskit/: __init__.py  actions.py  es.py  exporters.py  grammar.py
eskit-python/examples/: eskit.config.example.toml
eskit-python/tests/: test_util.py
eskit-rust/: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
eskit-rust/.github/workflows/: release.yml
eskit-rust/docs/: everything-es.md  wsl.md
eskit-rust/examples/: commands.md
eskit-rust/src/: actions.rs  cli.rs  es.rs  formatters.rs  fuzzy.rs  grammar.rs  main.rs  models.rs  selector.rs  util.rs
scripts/: build-exe.ps1
tests/: test_cli.py  test_es_client.py  test_grammar.py  test_smart_search.py
