[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "eskit-python"
version = "1.0.0"
description = "WSL-first Listary-like Windows file search powered by Everything es.exe."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
  {name = "deliuou"}
]
keywords = ["everything", "es.exe", "windows", "file-search", "cli", "powershell", "automation", "wsl", "listary"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Programming Language :: Python :: 3",
  "Topic :: Desktop Environment :: File Managers",
  "Topic :: Utilities"
]
dependencies = [
  "typer>=0.12.3",
  "rich>=13.7.1",
  "send2trash>=1.8.3",
  "pypinyin>=0.51.0",
  "prompt_toolkit>=3.0.43"
]

[project.urls]
Homepage = "https://github.com/deliuou/eskit"
Issues = "https://github.com/deliuou/eskit/issues"
Repository = "https://github.com/deliuou/eskit"

[project.scripts]
eskit = "eskit.cli:entrypoint"

[tool.hatch.build.targets.wheel]
packages = ["eskit"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
